# dynamodb-test

./: .gitignore  README.md
assets/: dynamodbtest-access-log-dynamodb-policy.json  item1.json  item2.json  item3.json
lambda/: Cargo.toml
lambda/src/: main.rs
local_exe/: Cargo.toml
local_exe/src/: main.rs
