[package]
name = "bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log              = "0.4"
simple_logger    = "2"
lambda_runtime   = "0.5"
aws-config       = "0.14"
aws-sdk-dynamodb = "0.14"
serde_json       = "1"
simple-error     = "0.2"

tokio = { version = "1", features = [ "macros" ] }

